--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
